# gtactw_vitar36s

./: CMakeLists.txt
.github/workflows/: build-portmaster.yml
cmake/: armhf.cmake
loader/: so_util.h
platform/portmaster/: main_pm.c  sdl_pm.c  so_util_pm.c  stubs_pm.c
portmaster/gtactw/: GTA Chinatown Wars.sh  README.md  gameinfo.xml  port.json
